schema/testdata/validation_default_invalid_expression/schema.keel
model Post {
    fields {
        published Boolean @default(true == false)
    }
}
